feat (ui): Move projects to main page, Scroll to content in header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@ body {
   color: var(--foreground);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .project-link { /* Meant for text with links in project card desc */
   color: #3b82f6;
   text-decoration: underline;
